docs: comprehensive project analysis and README update including sentiment-predictor and port corrections